@@ -22,10 +22,18 @@
 #            col  on the port to set up telnet parameters.  This
 #            is most useful for using telnet.
 #
+#            rraw  enables the port to initially  connect  to  a 
+#            remote endpoint,  and  transfer  data  to  it  (the
+#            opposite of raw),  using  timeout  as  reconnecting
+#            interval when connection fails.
+#
 #     timeout
 #            The time (in seconds) before the port will be  dis-
 #            connected  if  there  is no activity on it.  A zero
 #            value disables this function.
+#
+#            In rraw state, the time will be used as reconnecti-
+#            on interval rather than disconnection timeout.
 #
 #     device The  name  of  the  device   to  connect  to.  This
 #            must be in the form of /dev/<device>.
@@ -104,3 +112,4 @@ TRACEFILE:tr1:/tmp/tr-\p-\Y-\M-\D-\H:\i:\s.\U
 3006:telnet:0:/dev/ttyS5:9600
 3007:telnet:0:/dev/ttyS6:9600
 5001:rawlp:10:/dev/lp0
+#9001:rraw:10:/dev/ttyACM0:38400
